Atualizações do versionamento API

--- a/api_lib/appsettings.json
+++ b/api_lib/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DataBase" : "Server=./Database=DB_SistemaBiblioteca;User Id=sa;Password=Kauann123"
+        "DataBase" : "Server=./;Database=DB_SistemaBiblioteca;User Id=sa;Password=Kauann123"
     },
   "AllowedHosts": "*"
 }
